--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "deploy": "next export && touch out/.nojekyll",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "classnames": "^2.3.2",
     "next": "13.5.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
